@@ -1,5 +1,7 @@
 package com.joinlivora.backend.payment;
 
+import com.joinlivora.backend.chargeback.model.ChargebackCase;
+import com.joinlivora.backend.chargeback.repository.ChargebackCaseRepository;
 import com.joinlivora.backend.user.User;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -20,7 +22,7 @@ import static org.mockito.Mockito.when;
 class ChargebackCorrelationServiceTest {
 
     @Mock
-    private ChargebackRepository chargebackRepository;
+    private ChargebackCaseRepository chargebackCaseRepository;
 
     @Mock
     private PaymentRepository paymentRepository;
@@ -28,13 +30,13 @@ class ChargebackCorrelationServiceTest {
     @InjectMocks
     private ChargebackCorrelationService correlationService;
 
-    private Chargeback chargeback;
+    private ChargebackCase chargeback;
     private UUID chargebackId;
 
     @BeforeEach
     void setUp() {
         chargebackId = UUID.randomUUID();
-        chargeback = new Chargeback();
+        chargeback = new ChargebackCase();
         chargeback.setId(chargebackId);
         chargeback.setDeviceFingerprint("fp-123");
         chargeback.setIpAddress("192.168.1.1");
@@ -44,60 +46,49 @@ class ChargebackCorrelationServiceTest {
 
     @Test
     void analyze_NoCorrelations_ShouldReturnZero() {
-        when(chargebackRepository.findAllByDeviceFingerprint("fp-123")).thenReturn(Collections.singletonList(chargeback));
-        when(chargebackRepository.findAllByIpAddress("192.168.1.1")).thenReturn(Collections.singletonList(chargeback));
-        when(chargebackRepository.findAllByPaymentMethodFingerprint("pm-456")).thenReturn(Collections.singletonList(chargeback));
+        when(chargebackCaseRepository.findAllByDeviceFingerprint("fp-123")).thenReturn(Collections.singletonList(chargeback));
+        when(chargebackCaseRepository.findAllByIpAddress("192.168.1.1")).thenReturn(Collections.singletonList(chargeback));
+        when(chargebackCaseRepository.findAllByPaymentMethodFingerprint("pm-456")).thenReturn(Collections.singletonList(chargeback));
         when(paymentRepository.findById(chargeback.getTransactionId())).thenReturn(Optional.empty());
 
         int score = correlationService.analyze(chargeback);
-
         assertEquals(0, score);
     }
 
     @Test
     void analyze_AllCorrelations_ShouldReturnMaxScore() {
-        Chargeback other = new Chargeback();
+        ChargebackCase other = new ChargebackCase();
         other.setId(UUID.randomUUID());
 
-        when(chargebackRepository.findAllByDeviceFingerprint("fp-123")).thenReturn(List.of(chargeback, other));
-        when(chargebackRepository.findAllByIpAddress("192.168.1.1")).thenReturn(List.of(chargeback, other));
-        when(chargebackRepository.findAllByPaymentMethodFingerprint("pm-456")).thenReturn(List.of(chargeback, other));
+        when(chargebackCaseRepository.findAllByDeviceFingerprint("fp-123")).thenReturn(List.of(chargeback, other));
+        when(chargebackCaseRepository.findAllByIpAddress("192.168.1.1")).thenReturn(List.of(chargeback, other));
+        when(chargebackCaseRepository.findAllByPaymentMethodFingerprint("pm-456")).thenReturn(List.of(chargeback, other));
 
         User creator = new User();
         creator.setId(100L);
         Payment payment = new Payment();
         payment.setCreator(creator);
         when(paymentRepository.findById(chargeback.getTransactionId())).thenReturn(Optional.of(payment));
-        when(chargebackRepository.findAllByCreatorId(100L)).thenReturn(List.of(chargeback, other));
+        when(chargebackCaseRepository.findAllByCreatorId(100L)).thenReturn(List.of(chargeback, other));
 
         int score = correlationService.analyze(chargeback);
-
         // 30 (device) + 20 (ip) + 40 (payment method) + 10 (creator) = 100
         assertEquals(100, score);
     }
 
     @Test
     void analyze_PartialCorrelations_ShouldSumCorrectly() {
-        Chargeback other = new Chargeback();
+        ChargebackCase other = new ChargebackCase();
         other.setId(UUID.randomUUID());
 
         // Only device and IP correlate
-        when(chargebackRepository.findAllByDeviceFingerprint("fp-123")).thenReturn(List.of(chargeback, other));
-        when(chargebackRepository.findAllByIpAddress("192.168.1.1")).thenReturn(List.of(chargeback, other));
-        when(chargebackRepository.findAllByPaymentMethodFingerprint("pm-456")).thenReturn(Collections.singletonList(chargeback));
+        when(chargebackCaseRepository.findAllByDeviceFingerprint("fp-123")).thenReturn(List.of(chargeback, other));
+        when(chargebackCaseRepository.findAllByIpAddress("192.168.1.1")).thenReturn(List.of(chargeback, other));
+        when(chargebackCaseRepository.findAllByPaymentMethodFingerprint("pm-456")).thenReturn(Collections.singletonList(chargeback));
         when(paymentRepository.findById(chargeback.getTransactionId())).thenReturn(Optional.empty());
 
         int score = correlationService.analyze(chargeback);
-
         // 30 (device) + 20 (ip) = 50
         assertEquals(50, score);
     }
 }
-
-
-
-
-
-
-
-
